bugfix: text glitch on safari ios (#37)
* updated reset.css:

- revert use of logical props on media elements

* updated reset.css: rm reduced-motion-query

* added code comment

* Revert "updated reset.css:"

This reverts commit ee61765b005e3384efde88b30de40a81761e4893.

* clean up reset.css:

- rm code comment
- rm dead code

* rm entire reduce motion block again...

* add back code comment

* rm dead code & code comment from reset.css

* disable text-decoration transition for prefers-reduced-motion

--- a/assets/css/base/base.css
+++ b/assets/css/base/base.css
@@ -222,6 +222,12 @@ small {
   transition: text-decoration-thickness 0.25s ease-in;
 }
 
+@media (prefers-reduced-motion: reduce) {
+  :where([href]) {
+    transition: none;
+  }
+}
+
 :where(a[href]:visited) {
   color: var(--text-color-link-visited);
 }
